# LibTorchPlayground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  environment.yml  main.cpp  main.py  requirements.txt
CIFAR/CPP/: cifar.hpp
CIFAR/CPP/Dataset/: CIFARTorchDataset.cpp
CIFAR/CPP/Models/BlockConvNet/: BlockConvNet.cpp  BlockConvNet.h
CIFAR/CPP/Trainer/: Trainer.cpp  Trainer.h  TrainerImpl.cpp
CIFAR/Dataset/: CIFARTorchDataset.cpp  CIFARTorchDataset.h
CIFAR/Models/BlockConvNet/: BlockConvNet.cpp  BlockConvNet.h  config.json
CIFAR/Python/: __init__.py
CIFAR/Python/Dataset/: dataset.py
CIFAR/Python/Models/: block_conv_model.py
CIFAR/Python/Trainer/: trainer.py
CIFAR/Trainer/: Trainer.cpp  Trainer.h  TrainerImpl.cpp
ONNX/ExportONNX/: export_onnx.py
ONNX/Inference/: Inference.cpp  Inference.h
Projects/CIFAR/CPP/: cifar.hpp
Projects/CIFAR/CPP/Dataset/: CIFARTorchDataset.cpp  CIFARTorchDataset.h
Projects/CIFAR/CPP/Models/BlockConvNet/: BlockConvNet.cpp  BlockConvNet.h
Projects/CIFAR/CPP/Trainer/: Trainer.hpp
Projects/CIFAR/Python/: __init__.py
Projects/CIFAR/Python/Dataset/: __init__.py  dataset.py
Projects/CIFAR/Python/Models/: __init__.py  block_conv_model.py
TorchScriptUtilities/CPP/LoadJIT/: LoadJIT.cpp
TorchScriptUtilities/ExportJIT/: export_jit.py
TorchScriptUtilities/LoadJIT/: LoadJIT.h
Trainer/: TrainerBase.hpp
Trainer/BashScript/: mpirunner.sh
Trainer/CPP/: Trainer.h  Trainer.hpp
Trainer/CPP/Utilities/: MultiprocessingBackend.hpp
Trainer/CPP/Utilities/BatchTransformTemplate/: BatchTransformTemplate.h  BatchTransformTemplate.hpp
Trainer/Python/: trainer.py
Trainer/Utilities/: BatchTransformTemplate.hpp  MultiprocessingBackend.hpp
Trainer/Utilities/Metrics/: Metrics.cpp  Metrics.h
